--- a/HWs/HW20/css/styles_our_pets.css
+++ b/HWs/HW20/css/styles_our_pets.css
@@ -307,7 +307,8 @@ li {
   letter-spacing: 0.06em; }
 
 .btn-primary {
-  background-color: #f1cdb3; }
+  background-color: #f1cdb3;
+  cursor: pointer; }
 
 .btn-secondary {
   border: 2px solid #f1cdb3; }
@@ -353,7 +354,10 @@ li {
 .btn-pages-active {
   background-color: #f1cdb3; }
 
-.btn:hover,
+.btn-switcher {
+  box-shadow: 0 0 5px 10px rgba(241, 205, 179, 0.3), inset 0 0 4px 4px rgba(255, 255, 255, 0.2); }
+
+.btn:hover:not(.btn-disabled),
 .btn-arrow:hover,
 .btn-pages:hover:not(.btn-disabled) {
   background-color: #fddcc4;
