--- a/HWs/HW20/scss/_variables.scss
+++ b/HWs/HW20/scss/_variables.scss
@@ -1,6 +1,10 @@
 // Colors
 
-$header-footer-gradient: linear-gradient(
+$header-footer: #5a4536;
+
+$header-footer-dark: #392c23;
+
+$header_footer_gradient: linear-gradient(
   90.26deg,
   #7d604b 0.23%,
   #251000 99.8%
