--- a/HWs/HW20/css/styles.css
+++ b/HWs/HW20/css/styles.css
@@ -307,7 +307,8 @@ li {
   letter-spacing: 0.06em; }
 
 .btn-primary {
-  background-color: #f1cdb3; }
+  background-color: #f1cdb3;
+  cursor: pointer; }
 
 .btn-secondary {
   border: 2px solid #f1cdb3; }
@@ -353,7 +354,10 @@ li {
 .btn-pages-active {
   background-color: #f1cdb3; }
 
-.btn:hover,
+.btn-switcher {
+  box-shadow: 0 0 5px 10px rgba(241, 205, 179, 0.3), inset 0 0 4px 4px rgba(255, 255, 255, 0.2); }
+
+.btn:hover:not(.btn-disabled),
 .btn-arrow:hover,
 .btn-pages:hover:not(.btn-disabled) {
   background-color: #fddcc4;
@@ -431,10 +435,11 @@ footer {
 
 .page_about header {
   min-height: 908px;
-  background: linear-gradient(90.26deg, #7d604b 0.23%, #251000 99.8%); }
+  background-color: #5a4536;
+  transition: background-color 0.5s linear; }
 
-.page_about header.header_light {
-  ackground: linear-gradient(90.26deg, #7d604b 0.23%, #251000 99.8%); }
+.page_about header.header_dark {
+  background-color: #392c23; }
 
 .nav-logo-container {
   height: 180px;
@@ -495,6 +500,8 @@ a:active {
   justify-content: space-between;
   align-items: flex-start;
   padding-bottom: 30px; }
+  .startscreen-content .switcher {
+    margin-bottom: 30px; }
   .startscreen-content h2 {
     font-family: Georgia;
     font-size: 44px;
@@ -503,6 +510,8 @@ a:active {
     font-weight: 400;
     letter-spacing: 0.06em;
     max-width: 325px; }
+  .startscreen-content form {
+    padding: 20px 0; }
   .startscreen-content p {
     font-family: Arial;
     font-size: 15px;
@@ -511,7 +520,21 @@ a:active {
     font-weight: 400;
     letter-spacing: 0.06em;
     max-width: 460px;
-    padding-bottom: 30px; }
+    padding: 10px 0; }
+  .startscreen-content .invalid-input {
+    box-shadow: 0 0 5px 5px red; }
+  .startscreen-content div.extraInfo {
+    font-family: Georgia;
+    font-size: 12px;
+    line-height: 22px;
+    color: #292929;
+    font-weight: 400;
+    letter-spacing: 0.06em;
+    max-width: 460px;
+    margin-top: 10px;
+    padding: 5px 15px;
+    background-color: #f1cdb3;
+    border-radius: 5px; }
 
 section:nth-child(even) {
   background-color: #f6f6f6; }
